# vmdk-rs

./: Cargo.toml  README.md  TODO  build.rs
.world/: build.sh  clean.sh
data/: 0.vmdk  1  1.vmdk  2.vmdk  3.vmdk  4.vmdk  monolithicFlat.vmdk  monolithicSparse.vmdk  streamOptimized.vmdk  streamOptimizedWithMarkers.vmdk  twoGbMaxExtentFlat.vmdk  twoGbMaxExtentSparse-s001.vmdk  twoGbMaxExtentSparse.vmdk  vmfs_thick-000001.vmdk  vmfs_thick-flat.vmdk  vmfs_thick.vmdk
ksy/: attrdef.ksy  attribute_header.ksy  attribute_list.ksy  boot_sector.ksy  extended_attribute.ksy  file_name_attribute.ksy  filetime.ksy  gpt_partition_table.ksy  index_allocation_buffer.ksy  index_entry.ksy  index_header.ksy  index_root.ksy  logfile.ksy  mbr_partition_table.ksy  mft_entry.ksy  ntfs.ksy  record_header.ksy  reparse_point.ksy  security_descriptor_attribute.ksy  sparse.ksy  standard_information_attribute.ksy  symbols.ksy  vmware_cowd.ksy  vmware_vmdk.ksy  volume_information_attribute.ksy
ksy/pre-generated/: vmware_cowd.rs  vmware_vmdk.rs
reader/: Cargo.toml
reader/src/: main.rs
src/: lib.rs  main.rs  mmapper.rs  partition_type.rs  vmdk_reader.rs
