[package]
name = "vmdk-rs"
version = "0.1.0"
authors = ["Aon"]
edition = "2021"

[lib]
name = "vmdk"
path = "src/lib.rs"

[dependencies]
kaitai = { git = "https://github.com/Agile86/kaitai_rust.git", branch = "rust_basic_support_v2" }
simple-error = "*"
regex = "^1"
sha-1 = "^0.10"
flate2 = "^1"
byteorder = "^1.5"
phf = { version = "^0.11", features = ["macros"] }
